# pytest-result-sender

./: msg.md  pyproject.toml  recipient.md
src/pytest_result_sender/: plugin.py
tests/: test_abc.py
