[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daxigua", email = "2201130015@qq.com"},
]
dependencies = [
    "pytest>=8.3.4",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-p pytest_result_sender.plugin"



[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
]}

test = "pytest"

[project.entry-points.pytestll]
result_log = "pytest_result_sender.plugin"


[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "flake8>=7.1.2",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(

      \.git
    | \.hg
    | \.tox
    | venv
    | buck-out
    | build
    | dist
)
'''

